--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -7,30 +7,74 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <style>
+    h2 {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
-<body>
-  <div class="container text-center jumbotron">
+<body class="text-center">
+  <div class="container jumbotron">
     <h1>Mission to Mars</h1>
-    <a class="btn btn-primary" href="#" role="button">Scrape New Data</a>
+    <a class="btn btn-primary" href="/scrape" role="button">Scrape New Data</a>
   </div>
-  <div class="container text-left jumbotron">
-    <h2>Latest Mars News</h2>
-    <h3>{{ mars_info['news_results']['news_title'] }}</h3>
-    <p>{{ mars_info['news_results']['news_p'] }}</p>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card jumbotron">
+          <h2 class="card-title">Latest Mars News</h2>
+          <h3>{{ mars_info['news_results']['news_title'] }}</h3>
+          <p>{{ mars_info['news_results']['news_p'] }}</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card jumbotron">
+          <h2 class="card-title">Featured Mars Image</h1>
+          <img src = "{{ mars_info['img_url'] }}" height="500">
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="container jumbotron">
-    <h2>Featured Mars Image</h1>
-    <img src = {{ mars_info['img_url'] }}>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card jumbotron">
+          <h2 class="card-title">Current Weather on Mars</h2>
+          <p>{{ mars_info['mars_weather'] }}</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="card jumbotron">
+          <h2 class="card-title">Mars Facts</h2>
+          {{ mars_info['table_string'] | safe }}
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="container jumbotron">
-    <h2>Current Weather on Mars</h2>
-  </div>
-  <div class="container jumbotron">
-    <h1>Mars Facts</h1>
-  </div>
-  <div class="container jumbotron">
+
+  <div class="jumbotron container">
     <h2>Mars Hemispheres</h2>
+      <div class="row">
+        <div class="col-md-6 card"> 
+          <img src="{{ mars_info['hemisphere_image_urls'][0]['img_url'] }}" height="400">
+          <h4 class="card-title">{{ mars_info['hemisphere_image_urls'][0]['title'] }}</h4>
+        </div>
+        <div class="col-md-6 card"> 
+          <img src="{{ mars_info['hemisphere_image_urls'][1]['img_url'] }}" height="400">
+          <h4 class="card-title">{{ mars_info['hemisphere_image_urls'][1]['title'] }}</h4>
+        </div>
+        <div class="col-md-6 card"> 
+          <img src="{{ mars_info['hemisphere_image_urls'][2]['img_url'] }}" height="400">
+          <h4 class="card-title">{{ mars_info['hemisphere_image_urls'][2]['title'] }}</h4>
+        </div>
+        <div class="col-md-6 card"> 
+          <img src="{{ mars_info['hemisphere_image_urls'][3]['img_url'] }}" height="400">
+          <h4 class="card-title">{{ mars_info['hemisphere_image_urls'][3]['title'] }}</h4>
+        </div>
+      </div>
   </div>
 </body>
 
