--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -1,3 +1,13 @@
+<!--
+
+###---------------------------------------------------------###
+###   Web Scraping HW -- Mission to Mars                    ###
+###   Justin Foust  --  01/11/2020  --  Data Boot Camp      ###
+###---------------------------------------------------------###
+
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,7 +27,7 @@
 <body class="text-center">
   <div class="container jumbotron">
     <h1>Mission to Mars</h1>
-    <a class="btn btn-primary" href="/scrape" role="button">Scrape New Data</a>
+    <a class="btn btn-primary" href="/" role="button">Scrape New Data</a>
   </div>
 
   <div class="container">
